# django-react-store

./: .gitignore  build.sh  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt
api/: api_serealizers.py  endpoints.py  models.py  urls.py
api/migrations/: 0001_initial.py  0002_alter_typeofclothes_id_alter_typeofclothes_slug.py  0003_alter_typeofclothes_slug.py  0004_alter_typeofclothes_slug.py  0005_alter_typeofclothes_slug.py  0006_remove_clothings_type_delete_image_delete_clothings_and_more.py
backend/: admin.py  models.py  settings.py  urls.py
catalog/: admin.py  models.py
catalog/migrations/: 0001_initial.py  0002_alter_clothings_size_l_alter_clothings_size_m_and_more.py  0002_alter_typeofclothes_id.py
public/: index.html
src/: App.js  index.css
src/components/: Cart.js  Category.js  Footer.js  Header.js  Main.js
src/pages/: About.js  Cart.js  CartMobile.js  CatalogPage.js  Index.js
