[tool.poetry]
name = "django-react-store"
version = "0.1.0"
description = ""
authors = ["Stepanchenko Andrey <renegadeloss696@gmail.com>"]
readme = "README.md"
packages = [{include = "django_react_store"}]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
whitenoise = "^6.2.0"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
psycopg2 = "^2.9.5"
psycopg2-binary = "^2.9.5"
transliterate = "^1.10.2"
Pillow = "^9.3.0"
django-autoslug = "^1.9.8"
python-dotenv = "^0.21.0"
dj-database-url = "^1.2.0"
Django = "^3.2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
